exports[`preview > desktop > Small content #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Some usual text",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`preview > desktop > Small content + style #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Some usual text",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 14,
          "style": "BOLD"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "UNDERLINE"
        },
        {
          "length": 9,
          "offset": 25,
          "style": "{\"FG\":\"#c30303\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#ffffff00\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#c0c0c0\"}"
        }
      ],
      "key": 1,
      "text": "That supports style with textColor and textBackground",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 20,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 2,
      "text": "with some other line",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`preview > desktop > ReadMore (lines > 3) #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Some usual text",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 14,
          "style": "BOLD"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "UNDERLINE"
        },
        {
          "length": 9,
          "offset": 25,
          "style": "{\"FG\":\"#c30303\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#ffffff00\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#c0c0c0\"}"
        }
      ],
      "key": 1,
      "text": "That supports style with textColor and textBackground",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 20,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 2,
      "text": "with some other line",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 147,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 3,
      "text": "However, this line won't be shown initially in preview. You'll have to click `Read more` to see it, as default rule to trigger readMore is 3 lines.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`preview > desktop > ReadMore + 1x Image #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Some usual text",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 14,
          "style": "BOLD"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "UNDERLINE"
        },
        {
          "length": 9,
          "offset": 25,
          "style": "{\"FG\":\"#c30303\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#ffffff00\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#c0c0c0\"}"
        }
      ],
      "key": 1,
      "text": "That supports style with textColor and textBackground",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 20,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 2,
      "text": "with some other line",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 147,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 3,
      "text": "However, this line won't be shown initially in preview. You'll have to click `Read more` to see it, as default rule to trigger readMore is 3 lines.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 5,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "height": 1280,
          "id": "15f407e0947a3680a2261a41cb6abbb6",
          "original_file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "width": 1920
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`preview > desktop > ReadMore + 2x Image #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Some usual text",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 14,
          "style": "BOLD"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "UNDERLINE"
        },
        {
          "length": 9,
          "offset": 25,
          "style": "{\"FG\":\"#c30303\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#ffffff00\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#c0c0c0\"}"
        }
      ],
      "key": 1,
      "text": "That supports style with textColor and textBackground",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 20,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 2,
      "text": "with some other line",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 147,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 3,
      "text": "However, this line won't be shown initially in preview. You'll have to click `Read more` to see it, as default rule to trigger readMore is 3 lines.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 5,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 8,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "height": 1280,
          "id": "15f407e0947a3680a2261a41cb6abbb6",
          "original_file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "width": 1920
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "height": 3467,
          "id": "c6b5cd1f1316311ec3560d6fb7d50958",
          "original_file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "width": 5200
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`preview > desktop > ReadMore + 5x Image #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Some usual text",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 14,
          "style": "BOLD"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "UNDERLINE"
        },
        {
          "length": 9,
          "offset": 25,
          "style": "{\"FG\":\"#c30303\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#ffffff00\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#c0c0c0\"}"
        }
      ],
      "key": 1,
      "text": "That supports style with textColor and textBackground",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 20,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 2,
      "text": "with some other line",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 147,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 3,
      "text": "However, this line won't be shown initially in preview. You'll have to click `Read more` to see it, as default rule to trigger readMore is 3 lines.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 5,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 8,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 10,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 2,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 11,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 12,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 13,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 3,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 14,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 15,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 16,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 4,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 17,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 18,
      "text": "",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "height": 1280,
          "id": "15f407e0947a3680a2261a41cb6abbb6",
          "original_file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "width": 1920
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "height": 3467,
          "id": "c6b5cd1f1316311ec3560d6fb7d50958",
          "original_file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "width": 5200
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "2": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_215d5a60549f49fdb8fe2afe5ae2019e.jpg",
          "height": 3413,
          "id": "bc1243ce59ebe679f463d6a9dfbd1068",
          "original_file_name": "8bb438_215d5a60549f49fdb8fe2afe5ae2019e.jpg",
          "width": 5120
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "3": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_a8a7ff22738445faa74cf7f68866f4d8.jpg",
          "height": 4722,
          "id": "338f76721bc5a127ebf0b01306abf35e",
          "original_file_name": "8bb438_a8a7ff22738445faa74cf7f68866f4d8.jpg",
          "width": 3542
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "4": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_2a22b3e85bb1434e81f6fbd4878fb4ae.jpg",
          "height": 3728,
          "id": "22883fe4ca22b25b5b19c8640d21d524",
          "original_file_name": "8bb438_2a22b3e85bb1434e81f6fbd4878fb4ae.jpg",
          "width": 5600
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`preview > desktop > ReadMore + 5x Image + Text in-between #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Some usual text",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 14,
          "style": "BOLD"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "UNDERLINE"
        },
        {
          "length": 9,
          "offset": 25,
          "style": "{\"FG\":\"#c30303\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#ffffff00\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#c0c0c0\"}"
        }
      ],
      "key": 1,
      "text": "That supports style with textColor and textBackground",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 20,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 2,
      "text": "with some other line",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 147,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 3,
      "text": "However, this line won't be shown initially in preview. You'll have to click `Read more` to see it, as default rule to trigger readMore is 3 lines.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 4,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Some text here, that should not be visible.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "This is because we only take the first fragment of text that is visible.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 8,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 10,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 2,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 11,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 12,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 13,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 3,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 14,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 15,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 16,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 4,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 17,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 18,
      "text": "",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "height": 1280,
          "id": "15f407e0947a3680a2261a41cb6abbb6",
          "original_file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "width": 1920
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "height": 3467,
          "id": "c6b5cd1f1316311ec3560d6fb7d50958",
          "original_file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "width": 5200
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "2": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_215d5a60549f49fdb8fe2afe5ae2019e.jpg",
          "height": 3413,
          "id": "bc1243ce59ebe679f463d6a9dfbd1068",
          "original_file_name": "8bb438_215d5a60549f49fdb8fe2afe5ae2019e.jpg",
          "width": 5120
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "3": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_a8a7ff22738445faa74cf7f68866f4d8.jpg",
          "height": 4722,
          "id": "338f76721bc5a127ebf0b01306abf35e",
          "original_file_name": "8bb438_a8a7ff22738445faa74cf7f68866f4d8.jpg",
          "width": 3542
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "4": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_2a22b3e85bb1434e81f6fbd4878fb4ae.jpg",
          "height": 3728,
          "id": "22883fe4ca22b25b5b19c8640d21d524",
          "original_file_name": "8bb438_2a22b3e85bb1434e81f6fbd4878fb4ae.jpg",
          "width": 5600
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`preview > desktop > ReadMore + 1x Gif + 5x Image #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Some usual text",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 14,
          "style": "BOLD"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "UNDERLINE"
        },
        {
          "length": 9,
          "offset": 25,
          "style": "{\"FG\":\"#c30303\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#ffffff00\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#c0c0c0\"}"
        }
      ],
      "key": 1,
      "text": "That supports style with textColor and textBackground",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 20,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 2,
      "text": "with some other line",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 147,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 3,
      "text": "However, this line won't be shown initially in preview. You'll have to click `Read more` to see it, as default rule to trigger readMore is 3 lines.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 5,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 10,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 11,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 12,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 2,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 13,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 14,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 15,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 3,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 16,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 17,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 18,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 4,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 19,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 20,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 21,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 5,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 22,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 23,
      "text": "",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "size": "content"
        },
        "configViewer": {
          "sizes": {
            "desktop": "original",
            "mobile": "original"
          }
        },
        "gif": {
          "downsizedSmallMp4": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy-downsized-small.mp4?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy-downsized-small.mp4",
          "downsizedStillUrl": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy-downsized_s.gif?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy-downsized_s.gif",
          "downsizedUrl": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy-downsized.gif?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy-downsized.gif",
          "height": 268,
          "originalMp4": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy.mp4?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy.mp4",
          "originalUrl": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy.gif?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy.gif",
          "stillUrl": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy_s.gif?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy_s.gif",
          "width": 268
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-giphy"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "height": 1280,
          "id": "15f407e0947a3680a2261a41cb6abbb6",
          "original_file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "width": 1920
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "2": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "height": 3467,
          "id": "c6b5cd1f1316311ec3560d6fb7d50958",
          "original_file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "width": 5200
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "3": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_215d5a60549f49fdb8fe2afe5ae2019e.jpg",
          "height": 3413,
          "id": "bc1243ce59ebe679f463d6a9dfbd1068",
          "original_file_name": "8bb438_215d5a60549f49fdb8fe2afe5ae2019e.jpg",
          "width": 5120
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "4": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_a8a7ff22738445faa74cf7f68866f4d8.jpg",
          "height": 4722,
          "id": "338f76721bc5a127ebf0b01306abf35e",
          "original_file_name": "8bb438_a8a7ff22738445faa74cf7f68866f4d8.jpg",
          "width": 3542
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "5": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_2a22b3e85bb1434e81f6fbd4878fb4ae.jpg",
          "height": 3728,
          "id": "22883fe4ca22b25b5b19c8640d21d524",
          "original_file_name": "8bb438_2a22b3e85bb1434e81f6fbd4878fb4ae.jpg",
          "width": 5600
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`preview > desktop > ReadMore + 1x Vid + 1x Gif + 5x Image #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Some usual text",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 14,
          "style": "BOLD"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "UNDERLINE"
        },
        {
          "length": 9,
          "offset": 25,
          "style": "{\"FG\":\"#c30303\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#ffffff00\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#c0c0c0\"}"
        }
      ],
      "key": 1,
      "text": "That supports style with textColor and textBackground",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 20,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 2,
      "text": "with some other line",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 147,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 3,
      "text": "However, this line won't be shown initially in preview. You'll have to click `Read more` to see it, as default rule to trigger readMore is 3 lines.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 5,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 7,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 10,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 11,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 2,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 12,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 13,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 14,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 3,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 15,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 16,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 17,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 4,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 18,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 19,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 20,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 5,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 21,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 22,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 23,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 6,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 24,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 25,
      "text": "",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "size": "content"
        },
        "metadata": {
          "author_name": "Wix.com",
          "author_url": "https://www.youtube.com/user/Wix",
          "height": 270,
          "html": "<iframe width=\"480\" height=\"270\" src=\"https://www.youtube.com/embed/jhXlnvYZZQs?feature=oembed\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>",
          "provider_name": "YouTube",
          "provider_url": "https://www.youtube.com/",
          "thumbnail_height": 360,
          "thumbnail_url": "https://i.ytimg.com/vi/jhXlnvYZZQs/hqdefault.jpg",
          "thumbnail_width": 480,
          "title": "Wix.com Official 2018 Big Game Ad with Rhett & Link — Extended Version",
          "type": "video",
          "version": "1.0",
          "video_url": "https://youtu.be/jhXlnvYZZQs",
          "width": 480
        },
        "src": "https://www.youtube.com/watch?v=ASe9-yoCk9k",
        "tempData": false
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-video"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "size": "content"
        },
        "configViewer": {
          "sizes": {
            "desktop": "original",
            "mobile": "original"
          }
        },
        "gif": {
          "downsizedSmallMp4": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy-downsized-small.mp4?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy-downsized-small.mp4",
          "downsizedStillUrl": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy-downsized_s.gif?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy-downsized_s.gif",
          "downsizedUrl": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy-downsized.gif?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy-downsized.gif",
          "height": 268,
          "originalMp4": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy.mp4?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy.mp4",
          "originalUrl": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy.gif?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy.gif",
          "stillUrl": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy_s.gif?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy_s.gif",
          "width": 268
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-giphy"
    },
    "2": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "height": 1280,
          "id": "15f407e0947a3680a2261a41cb6abbb6",
          "original_file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "width": 1920
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "3": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "height": 3467,
          "id": "c6b5cd1f1316311ec3560d6fb7d50958",
          "original_file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "width": 5200
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "4": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_215d5a60549f49fdb8fe2afe5ae2019e.jpg",
          "height": 3413,
          "id": "bc1243ce59ebe679f463d6a9dfbd1068",
          "original_file_name": "8bb438_215d5a60549f49fdb8fe2afe5ae2019e.jpg",
          "width": 5120
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "5": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_a8a7ff22738445faa74cf7f68866f4d8.jpg",
          "height": 4722,
          "id": "338f76721bc5a127ebf0b01306abf35e",
          "original_file_name": "8bb438_a8a7ff22738445faa74cf7f68866f4d8.jpg",
          "width": 3542
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "6": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_2a22b3e85bb1434e81f6fbd4878fb4ae.jpg",
          "height": 3728,
          "id": "22883fe4ca22b25b5b19c8640d21d524",
          "original_file_name": "8bb438_2a22b3e85bb1434e81f6fbd4878fb4ae.jpg",
          "width": 5600
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`preview > desktop > ReadMore + 2x Vid + 1x Gif + 5x Image #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Some usual text",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 14,
          "style": "BOLD"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 14,
          "style": "UNDERLINE"
        },
        {
          "length": 9,
          "offset": 25,
          "style": "{\"FG\":\"#c30303\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#ffffff00\"}"
        },
        {
          "length": 14,
          "offset": 39,
          "style": "{\"BG\":\"#c0c0c0\"}"
        }
      ],
      "key": 1,
      "text": "That supports style with textColor and textBackground",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 20,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 2,
      "text": "with some other line",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 147,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff00\"}"
        }
      ],
      "key": 3,
      "text": "However, this line won't be shown initially in preview. You'll have to click `Read more` to see it, as default rule to trigger readMore is 3 lines.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 5,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 7,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 2,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 9,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 10,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 11,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 12,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 13,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 3,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 14,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 15,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 16,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 4,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 17,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 18,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 19,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 5,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 20,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 21,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 22,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 6,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 23,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 24,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 25,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 7,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 26,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 27,
      "text": "",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "size": "content"
        },
        "isCustomVideo": true,
        "src": {
          "pathname": "video/11062b_a552731f40854d16a91627687fb8d1a6/1080p/mp4/file.mp4",
          "thumbnail": {
            "height": 1080,
            "pathname": "media/11062b_a552731f40854d16a91627687fb8d1a6f000.jpg",
            "width": 1920
          }
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-video"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "size": "content"
        },
        "metadata": {
          "author_name": "Wix.com",
          "author_url": "https://www.youtube.com/user/Wix",
          "height": 270,
          "html": "<iframe width=\"480\" height=\"270\" src=\"https://www.youtube.com/embed/jhXlnvYZZQs?feature=oembed\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>",
          "provider_name": "YouTube",
          "provider_url": "https://www.youtube.com/",
          "thumbnail_height": 360,
          "thumbnail_url": "https://i.ytimg.com/vi/jhXlnvYZZQs/hqdefault.jpg",
          "thumbnail_width": 480,
          "title": "Wix.com Official 2018 Big Game Ad with Rhett & Link — Extended Version",
          "type": "video",
          "version": "1.0",
          "video_url": "https://youtu.be/jhXlnvYZZQs",
          "width": 480
        },
        "src": "https://www.youtube.com/watch?v=ASe9-yoCk9k",
        "tempData": false
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-video"
    },
    "2": {
      "data": {
        "config": {
          "alignment": "center",
          "size": "content"
        },
        "configViewer": {
          "sizes": {
            "desktop": "original",
            "mobile": "original"
          }
        },
        "gif": {
          "downsizedSmallMp4": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy-downsized-small.mp4?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy-downsized-small.mp4",
          "downsizedStillUrl": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy-downsized_s.gif?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy-downsized_s.gif",
          "downsizedUrl": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy-downsized.gif?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy-downsized.gif",
          "height": 268,
          "originalMp4": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy.mp4?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy.mp4",
          "originalUrl": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy.gif?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy.gif",
          "stillUrl": "https://media2.giphy.com/media/4Zo41lhzKt6iZ8xff9/giphy_s.gif?cid=558f2fbeh2i5a2o44ta0ti98ldfxbefyfzd7xdac0bnh1hzn&rid=giphy_s.gif",
          "width": 268
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-giphy"
    },
    "3": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "height": 1280,
          "id": "15f407e0947a3680a2261a41cb6abbb6",
          "original_file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "width": 1920
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "4": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "height": 3467,
          "id": "c6b5cd1f1316311ec3560d6fb7d50958",
          "original_file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "width": 5200
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "5": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_215d5a60549f49fdb8fe2afe5ae2019e.jpg",
          "height": 3413,
          "id": "bc1243ce59ebe679f463d6a9dfbd1068",
          "original_file_name": "8bb438_215d5a60549f49fdb8fe2afe5ae2019e.jpg",
          "width": 5120
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "6": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_a8a7ff22738445faa74cf7f68866f4d8.jpg",
          "height": 4722,
          "id": "338f76721bc5a127ebf0b01306abf35e",
          "original_file_name": "8bb438_a8a7ff22738445faa74cf7f68866f4d8.jpg",
          "width": 3542
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "7": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_2a22b3e85bb1434e81f6fbd4878fb4ae.jpg",
          "height": 3728,
          "id": "22883fe4ca22b25b5b19c8640d21d524",
          "original_file_name": "8bb438_2a22b3e85bb1434e81f6fbd4878fb4ae.jpg",
          "width": 5600
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`preview > desktop > Text Fragmentation Example #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "Preview takes the first text fragment and displays it as if it was the first.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 3,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "That's why this line won't be displayed in preview, because there's an image between the fragments.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "height": 1280,
          "id": "15f407e0947a3680a2261a41cb6abbb6",
          "original_file_name": "8bb438_b2d862605f684658926e6ee05e954880.jpg",
          "width": 1920
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "height": 3467,
          "id": "c6b5cd1f1316311ec3560d6fb7d50958",
          "original_file_name": "8bb438_17a7e143ea0148959ef6c5663158ade0.jpg",
          "width": 5200
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};
